--- a/argocd/applications/kustomize-application.yaml
+++ b/argocd/applications/kustomize-application.yaml
@@ -1,14 +1,14 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: grade-submission-dev
+  name: grade-submission-prod
   namespace: argocd
 spec:
   project: default
   source:
     repoURL: https://github.com/rslim087a/argocd-kubernetes-gitops-tutorial.git
     targetRevision: HEAD
-    path: kustomize/overlays/dev
+    path: kustomize/overlays/prod
   destination:
     server: https://kubernetes.default.svc
     namespace: grade-demo
